# chitragupt_AB

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: ci.yaml
docs/: BRA_Research_Document.md  Product_Discovery_Workbook.md  epistemology.md  invariants.md  ontology.md  prompts.txt  unknowns_and_stakeholder_queries.md
docs/architecture/: DATABASE.md  EPISTEMOLOGY.md  TECH_STACK.md  conventions_and_protocols.md  invariants.md  ontology.md
docs/diagrams/: 01-ba-journey.md  02-hard-gates.md  03-per-turn-pipeline.md  04-knowledge-trust.md  05-system-services.md  README.md
docs/logs/: prompt_trail.md
docs/sprints/: sprint_0_foundation.md  sprint_1_ingestion_rag.md  sprint_2_agentic_synthesis.md  sprint_3_review_loop.md  sprint_4_integrations.md  sprint_5_security_compliance.md  sprint_6_optimization_ga.md
docs/tech-docs/: state-machine.md
services/state-machine/: Cargo.toml
services/state-machine/proto/: state_engine.proto
services/state-machine/src/: error.rs  lib.rs  main.rs
services/state-machine/src/ac/: mod.rs  result.rs  s1.rs  s2.rs  s3.rs  s4.rs  s5.rs  s6.rs
services/state-machine/src/gates/: manager.rs  mod.rs
services/state-machine/src/state/: mod.rs  phase.rs  session.rs  transition.rs
services/state-machine/tests/: ac_evaluators.rs  gate_manager.rs  phase_tests.rs  session_tests.rs  transition_engine.rs
sprint0/: BA_HITL_FLOW.md  DECISIONS.md  README.md
sprint0/decisions/: ADR-001-language-runtime.md  ADR-002-orchestration-framework.md  (+13 more)
sprint1/: README.md
(+20 files in other folders)
